# tstsrl

./: .gitignore  CMakeLists.txt  README  README.md  doit  doit.rb  doxyfile
assets/: CMakeLists.txt
assets/fonts/: quicksand_license.txt
platform_specific/android/: README
platform_specific/android/jni/: README.md
platform_specific/android/jni/src/: Android.mk  Android.mk.in
platform_specific/android/jni/src/engine/: Android.mk.in
platform_specific/android/jni/src/game/: Android.mk.in
platform_specific/android/src/org/libsdl/app/: SDLActivity.java
platform_specific/windows/: README.md
platform_specific/windows/sdl/lib/: SDL.lib  SDL2_ttf.lib  SDLmain.lib
prj/android/: AndroidManifest.xml
prj/android/jni/: README
prj/android/jni/src/: Android.mk
prj/linux/: makefile
prj/vc_2010/: vc_2010.sdf  vc_2010.sln  vc_2010.vcxproj  vc_2010.vcxproj.filters
prj/vc_2010/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  vc100.idb  vc_2010.ilk  vc_2010.lastbuildstate
prj/vc_2010/ipch/vc_2010-5a0207ac/: vc_2010-970c0ba7.ipch
src/: CMakeLists.txt  main.cpp
src/android/: main.cpp
src/engine/: CMakeLists.txt
src/engine/include/: Command.h  CommandQueue.h  EngineException.h  IRenderInfo.h  IRenderer.h  IStateChanger.h  Looper.h  State.h  StateManager.h
src/engine/src/: CommandQueue.cpp  Looper.cpp  StateManager.cpp
src/game/: CMakeLists.txt
src/game/include/: ControllerSelectState.h  GameState.h  MainMenuState.h  Renderer.h  States.h
src/game/src/: ControllerSelectState.cpp  GameState.cpp  MainMenuState.cpp  main.cpp
src/linux/: main.cpp
src/win/: main.cpp
test/: CMakeLists.txt  README.md
test/engine/: CMakeLists.txt
test/engine/include/: MockLoopModerator.h  MockState.h  test.h
test/engine/src/: test_command_queue.cpp  test_looper.cpp  test_state_manager.cpp
